// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart renders deep correctly 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    joe - joe@mail.com
  </Text>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        item 1
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        7
      </Text>
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Delete
          </Text>
        </View>
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        item 2
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        4
      </Text>
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Delete
          </Text>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Total 
      11
    </Text>
  </View>
</View>
`;

exports[`Cart renders shallow correctly 1`] = `
<Container>
  <User
    user={
      Object {
        "email": "joe@mail.com",
        "name": "joe",
      }
    }
  />
  <Items
    items={
      Array [
        Object {
          "id": 1,
          "name": "item 1",
          "price": 7,
        },
        Object {
          "id": 2,
          "name": "item 2",
          "price": 4,
        },
      ]
    }
  />
</Container>
`;

exports[`Items renders one item correctly 1`] = `
<Container>
  <Item
    item={
      Object {
        "id": 1,
        "name": "item 1",
        "price": 7,
      }
    }
    onDelete={[Function]}
  />
  <Total
    total={7}
  />
</Container>
`;

exports[`Items renders two items and deletes correctly 1`] = `
<Container>
  <Item
    item={
      Object {
        "id": 1,
        "name": "item 1",
        "price": 7,
      }
    }
    onDelete={[Function]}
  />
  <Item
    item={
      Object {
        "id": 2,
        "name": "item 2",
        "price": 4,
      }
    }
    onDelete={[Function]}
  />
  <Total
    total={11}
  />
</Container>
`;

exports[`Items renders two items and deletes correctly 2`] = `
<Container>
  <Item
    item={
      Object {
        "id": 2,
        "name": "item 2",
        "price": 4,
      }
    }
    onDelete={[Function]}
  />
  <Total
    total={4}
  />
</Container>
`;

exports[`Items renders zero items correctly 1`] = `
<Container>
  <Total
    total={0}
  />
</Container>
`;

exports[`User renders deep correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
>
  joe - joe@mail.com
</Text>
`;

exports[`User renders shallow correctly 1`] = `
<Title>
  joe - joe@mail.com
</Title>
`;
